--- a/app/src/main/res/layout/sprint_backlog_list.xml
+++ b/app/src/main/res/layout/sprint_backlog_list.xml
@@ -5,6 +5,10 @@
     <ListView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/sprint_backlog_listview"/>
+        android:id="@+id/sprint_backlog_listview"
+        android:divider="@android:color/transparent"
+        android:dividerHeight="10sp"
+        android:layout_marginStart="5dp"
+        android:layout_marginEnd="5dp"/>
 
 </android.support.constraint.ConstraintLayout>
