--- a/app/src/main/res/layout/sprint_backlog_list.xml
+++ b/app/src/main/res/layout/sprint_backlog_list.xml
@@ -1,8 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:titleTextColor="@color/colorWhite"
+        android:background="@color/colorPrimary" />
     <ListView
+        android:padding="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/sprint_backlog_listview"
@@ -11,4 +20,4 @@
         android:layout_marginStart="5dp"
         android:layout_marginEnd="5dp"/>
 
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
